--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/html-elements": "0.10.1",
     "@expo/vector-icons": "^14.0.0",
+    "@gluestack-ui/core": "3.0.0",
+    "@gluestack-ui/utils": "3.0.0",
+    "@legendapp/motion": "2.4.0",
     "@react-navigation/native": "^7.0.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "^53.0.22",
     "expo-constants": "~17.1.4",
     "expo-linking": "~7.1.4",
@@ -21,15 +26,19 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "nativewind": "latest",
+    "nativewind": "4.1.23",
     "react": "19.0.0",
+    "react-aria": "3.33.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "4.11.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "^0.20.0",
+    "react-stately": "3.39.0",
+    "tailwind-variants": "0.1.20",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -40,7 +49,7 @@
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "3.4.17",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "~5.8.3"
   },
